--- a/abc_comprehensivecba_predmodels.tex
+++ b/abc_comprehensivecba_predmodels.tex
@@ -33,7 +33,7 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 
 \noindent $\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed.\\ 
 
-\noindent In this document, we investigate the empirical implications of different assumptions on the structure of both $\phi_{k,j,a}^d \left( \cdot, \cdot \right)$ and $\varepsilon_{k,j,a}^d$.\\ 
+\noindent In this document, we investigate the empirical implications of different assumptions on the structure of both $\phi_{k,j,a}^d \left( \cdot, \cdot \right)$ and $\varepsilon_{k,j,a}^d$ when predicting labor income.\\ 
 
 \noindent We write: 
 
@@ -43,34 +43,74 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 
 \noindent where $\eta_{k,j,{a}}$ is i.i.d. and satisfies Assumption ~\ref{ass:exog} (Exogeneity).\\
 
-\noindent \textbf{[JJH: Look also at fixed effects. Meghir + Pistaferri papers.] [JLG: adding estimates for this below.]}\\
+\noindent It is also possible to extend the process in Equation~\eqref{eq:error} to account for an individual fixed. Given the limitations in our data, we decide to explore implications within this context.\\
 
-\noindent It is also possible to extend the process in Equation~\ref{eq:error} to account for an individual fixed. We present estimates for this below.\\
+\noindent Table~\ref{table:predsens} summarizes the results from this exploration through two statistics: (i) the net present value (discounted to birth treatment - control) of predicted labor income under different assumptions; and (ii) the overall cost-benefit ratio when the predictions are done based on the different proposed alternatives. The results indicate that there is little sensitivity to the deviations that we propose on the model that we base our predictions on in the main text.\\
 
+\begin{table}[H] 
+\begin{threeparttable}
+\caption{Net Present Value of Labor Income and Cost/Benefit Analysis Under Different Specifications for Labor Income Predictions}
+\label{table:predsens}
+\centering 
+\footnotesize
+\begin{tabular}{cccc} \toprule
+\multicolumn{4}{l}{ \textbf{Specification 1:  Lagged outcome in $\bm{X}_{k,a}$; set to $\rho = 0$}} \\
+& NPV Labor Income & IRR & B/C \\
+Pooled  & 71,345 & 0.13  & 6.29 \\ 
+             & (86,343) & (.05) & (2.11) \\ \\  
+Males & 300,896 & 0.13  & 11.1 \\ 
+               & (241,588) & (0.06)  & (6.35) \\ \\ 
+Females & 59,390 & 0.10  & 2.45 \\  
+          & (63,060) & (0.07) & (0.79) \\ \midrule \\ 
+\multicolumn{4}{l}{\textbf{Specification 2:  No lagged outcome in $\bm{X}_{k,a}$; Unrestricted $\rho$}} \\
+& NPV Labor Income & IRR & B/C \\
+Pooled  & 154,547 & 0.26  & 12.39 \\ 
+             & (187,036) & (0.11)  & (5.16) \\ \\
+Males & 200,509 & 0.09 & 7.62 \\ 
+               & (160,988) & (0.04) & (3.73) \\ \\
+Females & 79,441 & 0.15 & 3.61 \\  
+          & (99,416) & (0.11) & (1.56) \\ \midrule \\ 
+\multicolumn{4}{l}{\textbf{Specification 3:  Lagged outcome in $\bm{X}_{k,a}$; Unrestricted $\rho$}} \\
+& NPV Labor Income & IRR & B/C \\
+Pooled  & 171,510 & 0.29 & 13.75 \\ 
+             & (73,435) & (.04) & (2.02) \\ \\ 
+Males & 218,254 & .10  & 8.30 \\ 
+               & (127,144) & (0.03)  & (2.95) \\ \\  
+Females & 103,066 & 0.19  & 4.69 \\  
+          & (63,091) & (0.07)  & (0.99) \\ \midrule \\ 
+\multicolumn{4}{l}{\textbf{Specification 4:  Fully Non-Parametric}} \\ 
+& NPV Labor Income & IRR & B/C \\
+Pooled  & 62,080 & 0.10 & 4.98 \\ 
+             & (75,030) & (0.03)  & (2.07) \\ \\ 
+Males & 289,471& 0.13  & 11.01 \\ 
+               & (232,471) & (0.06) & (5.39) \\ \\ 
+Females & 59,163 &  0.11 & 2.69 \\  
+          & (74,039) & (0.08)  & (1.16) \\ \bottomrule
+\end{tabular}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table displays the net present value of labor income in 2014 USD (treatment - control) using the four different specifications for predicting that are explained below. Specification 1 is what we present in the main text. It also presents the calculation of the internal rate of return and the benefit-cost ratio of the program using these different net present values.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
 
 \noindent In the auxiliary sample, we observe the outcome $Y_{n,j,a}$ for $a \in [a^*, \ldots, A]$. In the experimental sample, we observe the outcome $Y_{e,j,a}$ for at most two ages, depending on the outcome. For the time being, suppose that we observe the outcome at one age ($a = a^*$). We come back to this below. By out-of-sample predictions we mean using the information in in the auxiliary sample at  $a \in [a^*, \ldots, A]$ to form interpolations in the experimental sample, where we do not observe the outcome of interest during this age periods. We produce out-of-sample predictions and calculate the net present value of labor income (treatment - control) under different structures.\\ 
 
-\subsubsection{Lagged Component in $\phi_{j,a}$ and No Serial Correlation}
+\subsubsection{Specification 1: Lagged Component in $\phi_{j,a}$ and No Serial Correlation}
 
 \noindent In this scenario, we assume that (i)  $Y_{k,j,a-1}$ is one of the elements in $\bm{X}_{k,a}$; and (ii) $\rho = 0$ in Equation~\eqref{eq:error}, and therefore Assumption ~\ref{ass:exog} (Exogeneity) holds for $\varepsilon_{k,j,a}^d$.\\
 
-\noindent \textbf{[JLG: comments before proceeding:]}
+\noindent \textbf{We note the following on this specification:}
 
 \begin{enumerate}
  
-\item This is the case where the current calculations of the paper are.
-\item Appealing features:
-
-\begin{enumerate}
 \item The predictions across the paper are constructed under this framework: labor and transfer income, crime, and health. 
 \item Our comparison between realizations and predictions work quite well, as displayed in the Figure 6 of the main text. 
 \item Additional tests show the following. We fail to reject: invariance across the treatment and the control groups, invariance across the experimental and auxiliary samples, and we fail to reject exogeneity both in the experimental and the auxiliary samples.  The tests are at $a = a^*$.
-
-\end{enumerate}
-\item Unappealing features: no serial correlation seems like an odd assumption. More on this, below. \textbf{[JJH: Do we know if it's an odd assumption for low-income people?] [JLG: I'm reporting this below, where I report the correlation coefficients for the core sample. It still an odd assumption for people who earn less than 75,000 per year throughout their life spans. For people who earn less, we do not really have the support to do the calculation. But give how close the estimates are with and without imposing the 75,000 restriction, seem that it is odd across the income distribution.]}
+\item No serial correlation is an odd assumption in this context.
 \end{enumerate}
 
-\noindent Before explaining the estimation procedure, note that Assumption~\ref{ass:summary} (Invariance) implies that $\phi_{k,j,a}^d \left (\cdot, \cdot \right) = \phi_{k,j,a}  \left (\cdot, \cdot \right) = \phi_{j,a}  \left (\cdot, \cdot \right)$. \textbf{[JJH: Maybe we should distinguish the two forms of invariance.] [JLG: that is an alternative that I would also prefer to follow. Let me know if you want to implement this in the main text so I can make the corresponding changes.]} That is, invariance holds across the treatment and the control groups and invariance holds across the experimental and the auxiliary samples. It is important to note that invariance across the treatment and the control groups implies that the variables $\bm{X}_{k,a}^d$ summarize the effect of the treatment on the outcome. Given this and Assumption ~\ref{ass:exog} (Exogeneity), the distribution of $\varepsilon_{k,j,a}^d$ is the same across the treatment and the control groups. We then drop the superindex in $\varepsilon_{k,j,a}^d$.\\ 
+\noindent Before explaining the estimation procedure, note that Assumption~\ref{ass:summary} (Invariance) implies that $\phi_{k,j,a}^d \left (\cdot, \cdot \right) = \phi_{k,j,a}  \left (\cdot, \cdot \right) = \phi_{j,a}  \left (\cdot, \cdot \right)$. That is, invariance holds across the treatment and the control groups and invariance holds across the experimental and the auxiliary samples. It is important to note that invariance across the treatment and the control groups implies that the variables $\bm{X}_{k,a}^d$ summarize the effect of the treatment on the outcome. Given this and Assumption ~\ref{ass:exog} (Exogeneity), the distribution of $\varepsilon_{k,j,a}^d$ is the same across the treatment and the control groups. We then drop the superindex in $\varepsilon_{k,j,a}^d$.\\ 
 
 \noindent We test invariance across the treatment and the control groups and invariance across the experimental and the auxiliary samples  in Appendix~\ref{app:invariance}.\\
 
@@ -80,35 +120,11 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 Y_{k,j,a} = \phi_{j,a} (\bm{X}_{k,a}, \bm{B}_k) + \varepsilon_{k,j,a}, \quad k \in \{n,e\}, \quad j \in \mathcal{J}_a.
 \end{equation}\\
 
-\noindent \textbf{In this scenario, the results are the following:}\\ \\
-\noindent \textbf{[JJH: seems very odd.] [JLG: This is the net present value in discounted 2014 USD. It is the figure we have been presenting in the main text.]}\\
-
-\begin{table}[H] 
-\begin{threeparttable}
-\caption{Net Present Value of Predicted Labor (Treatment - Control) for ABC/CARE}
-\label{table:yourlabel}
-\centering 
-\begin{tabular}{lcc} \toprule
-Pooled & 71,345 & (s.e. 86,343) \\
-Males & 300,896 & (s.e. 241,588) \\ 
-Females & 50,390 & (s.e. 63,060) \\ \bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{table}
-\begin{spacing}{1}
-\begin{footnotesize}
-\noindent Note: Net present value of predicted labor (treatment - control) for ABC/CARE estimating the system in Equations~\eqref{eq:outcome} and \eqref{eq:error} in the auxiliary samples and using these estimates to form predictions in the experimental sample.\\ 
-\noindent Specification: Lagged component in $\phi_{j,a}$ and no serial correlation in $\varepsilon_{k,j,a}$.\\
-\noindent Data: We estimate de model in the CNLSY from ages 21 to 30 and in using the NLSY79 and the PSID as a pooled sample from ages 31 to 67 (assumed retirement). 
-\end{footnotesize}
-\end{spacing}
-
-
-\subsubsection{No Lagged Component in $\phi_{j,a}$ and Serial Correlation}
+\subsubsection{Specification 2: No Lagged Component in $\phi_{j,a}$ and Serial Correlation}
 
 \noindent In this scenario, we assume that (i)  $Y_{k,j,a}$ is not one of the elements in $\bm{X}_{k,a}$; and (ii) we do not restrict $\rho$ in Equation~\eqref{eq:error}.\\
 
-\noindent \textbf{[JLG: comments before proceeding:]}
+\noindent \textbf{We note the following on this specification:}
 
 \begin{enumerate}
 
@@ -116,51 +132,23 @@ Females & 50,390 & (s.e. 63,060) \\ \bottomrule
 
 \item It is straightforward to account for serial correlation in this case: serial correlation is a particular case of arbitrary heteroskedasticity. We do not even need to take a stand on the functional form in Equation~\eqref{eq:error}. We can simply invoke the assumption of $Y_{k,j,a}$ not being one of the elements in $\bm{X}_{k,a}$ and proceed to account for arbitrary forms of heteroskedasticity. 
 
-\item The predictions in the paper are extremely similar in this case. That is, the lag does not help the predictions as much as we would initially think. This is more evidence in favor of $\bm{X}_{k,a}$ summarizing the treatment effects. \textbf{[JJH: Ok. Is this true for the health?] [JLG: I believe that it is much easier for them to check this than to $\rho$-transform. I have requested results along these lines from them.]}
+\item The predictions in the paper are extremely similar in this case. That is, the lag does not help the predictions as much as we would initially think. This is more evidence in favor of $\bm{X}_{k,a}$ summarizing the treatment effects.
 
-\item The framework for our testable implications holds as well in this scenario. That is, it is straightforward to show that in this scenario we can write Equation~\eqref{eq:outcome} as Equation~\eqref{eq:routcome}, which is the basis of our testable implications (of invariance). \textbf{The testable implications still hold empirically.} This scenario is actually where we began to test them.
-
-\item Why did we include the lag to begin with, then? To ``match'' what we are doing with what the FAM model does. 
+\item The framework for our testable implications holds as well in this scenario. That is, it is straightforward to show that in this scenario we can write Equation~\eqref{eq:outcome} as Equation~\eqref{eq:routcome}, which is the basis of our testable implications (of invariance). \textbf{The testable implications still hold empirically, and the tests are available upon request.}
 
 \end{enumerate}
 
-\noindent \textbf{In this scenario, the results are the following:}\\ \\
-\noindent \textbf{[JJH: Good news. But this looks very very noisy.] [JLG: Yes. Adding the sampling error from FGLS in addition to serial correlation really damages the standard errors.]}\\
-
-\begin{table}[H] 
-\begin{threeparttable}
-\caption{Net Present Value of Predicted Labor (Treatment - Control) for ABC/CARE}
-\label{table:yourlabel}
-\centering 
-\begin{tabular}{lcc} \toprule
-Pooled & 154, 547 & (s.e. 187,036) \\
-Males & 200,509  & (s.e. 160,988) \\ 
-Females & 79,441 & (s.e. 99,416) \\ \bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{table}
-\begin{spacing}{1}
-\begin{footnotesize}
-\noindent Note: Net present value of predicted labor (treatment - control) for ABC/CARE estimating the system in Equations~\eqref{eq:outcome} and \eqref{eq:error} in the auxiliary samples and using these estimates to form predictions in the experimental sample.\\ 
-\noindent Specification: No lagged component in $\phi_{j,a}$ and arbitrary serial correlation in $\varepsilon_{k,j,a}$.\\ 
-\noindent Data: We estimate de model in the CNLSY from ages 21 to 30 and in using the NLSY79 and the PSID as a pooled sample from ages 31 to 67 (assumed retirement). 
-\end{footnotesize}
-\end{spacing}
-
-
-
-\subsubsection{Lagged Component in $\phi_{j,a}$ and Serial Correlation} \label{section:laggedserial}
+\subsubsection{Specification 3: Lagged Component in $\phi_{j,a}$ and Serial Correlation} \label{section:laggedserial}
 
 \noindent In this scenario, we assume that (i)  $Y_{k,j,a}$ is one of the elements in $\bm{X}_{k,a}$; and (ii) we do not restrict $\rho$ in Equation~\eqref{eq:error}.\\
 
-\noindent \textbf{[JLG: comment before proceeding.]}\\
+\noindent \textbf{We note the following on this specification:}
 
 \begin{enumerate}
 
 \item The first question to ask is: is serial correlation present in the data? The estimates indicate that there is. From ages 21 to 30 we estimate the model in the CNLSY and the estimate for $\rho$ is $.7465$. From ages 30 to 67 (assumed retirement) we estimate the model in the NLSY79/PSID and the estimate for $\rho$ is $.5426$. When we restrict the sample to people who earn 75,000 at each of these ages, the analogous estimates of $\rho$ are $.7370$ and $.4645$. These estimates are significant at the 1\% level. We could invoke more formal tests, but with the size of the point estimates and their precision, we will never fail to reject the null of no autocorrelation. Details on this estimation come below.\\
 
-\item The second question to ask is: is do the testable still implications hold?  It is possible to derive the implications for the $\rho$-transformed model that we explain below, and it is possible to test them. \textbf{[JJH: Have you done so?] [JLG: Yes, I have added it. See Table~\ref{table:invariance}. It turns out that we fail to reject invariance. Please note that the coefficients look too far from zero at first glance, but this is annual labor income so 500 is not an extremely big coefficient. I think this is a reassuring finding.]}\\
-
+\item The second question to ask is: is do the testable still implications hold?  It is possible to derive the implications for the $\rho$-transformed model that we explain below, and it is possible to test them.
 \end{enumerate}
 
 \noindent To obtain estimates in this context, we proceed as follows: we assume that $\phi_{k,j,a} \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:routcome} is linear and drop the $j$ index that $\phi_{k,j,a} = \phi_{k,j,a'} \ \forall a \in [a^*, \ldots, A]$ and drop the $a$ index. The system of interest becomes
@@ -172,8 +160,6 @@ Y_{k,a} &=&\gamma_{0} + \bm{\gamma}_{X,a} \bm{X}_{k} + \varepsilon_{a}. \label{e
 
 \noindent where $\eta_{a}$ is i.i.d. and satisfies Assumption ~\ref{ass:exog} (Exogeneity). Standard estimation methods provide inconsistent estimates of $\bm{\gamma} : = [\gamma_{0}, \bm{\gamma}_{X}]$.\\
 
-\noindent \textbf{[JJH: with no lags, model is consistent.] [JLG: Yes, but recall that at the beginning of this section we state that $\bm{X}_{k}$ does contain a lag here and that's why we $\rho$-transform to get the predictions in Table 3.]}\\ 
-
 \noindent We can $\rho$-transform the system of interest and write: 
 
 
@@ -183,29 +169,9 @@ Y_{k,a} - \rho Y_{k,a-1} = \gamma_{0} \left( 1 - \rho \right) + \bm{\gamma}_{X} 
 
 \noindent If $\rho$ is known, it is straightforward to recover consistent estimates of $\bm{\gamma}$.\\
 
-\noindent If $\rho$ is unknown, there are various alternatives. We estimate $\rho$ by the Durbin Watson method: (i) estimate Equation~\eqref{eq:linear1} by OLS and compute the residuals, $\varepsilon_{a}$ for $a \in [a^*, \ldots, A]$; (ii) estimate $\rho$ as  $\corr \left( \hat{\varepsilon}_{a}, \hat{\varepsilon}_{a-1} \right)$.\\ 
+\noindent If $\rho$ is unknown, there are various alternatives. Importantly, note that it is not identified \underline{unless} $bm{X}_{a} \neq \rho \bm{X}_{a-1}$ for at least one element different from the lag of $Y_{k,a} $. We are able to identify it because we observe education at ages 21 and 30. We estimate $\rho$ by the Durbin Watson method: (i) estimate Equation~\eqref{eq:linear1} by OLS and compute the residuals, $\varepsilon_{a}$ for $a \in [a^*, \ldots, A]$; (ii) estimate $\rho$ as  $\corr \left( \hat{\varepsilon}_{a}, \hat{\varepsilon}_{a-1} \right)$.\\ 
 
 \noindent Once an estimate of $\rho$ is available, we can consistently estimate $\bm{\gamma}$. We iterate this procedure until an arbitrary degree of convergence is achieved. This is a standard feasible GLS method.\\ 
-
-\begin{table}[H] 
-\begin{threeparttable}
-\caption{Net Present Value of Predicted Labor (Treatment - Control) for ABC/CARE}
-\label{table:yourlabel}
-\centering 
-\begin{tabular}{lcc} \toprule
-Pooled & 171,510 & (s.e. 73,435 ) \\
-Males & 218,254 & (s.e. 127,144) \\ 
-Females & 103,006 & (s.e. 63,091) \\ \bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{table}
-\begin{spacing}{1}
-\begin{footnotesize}
-\noindent Note: Net present value of predicted labor (treatment - control) for ABC/CARE estimating the system in Equations~\eqref{eq:linear1} and \eqref{eq:linear2} in the auxiliary samples and using these estimates to form predictions in the experimental sample.\\ 
-\noindent Specification: Lagged component in $\phi_{j,a}$ and First-order serial correlation in $\varepsilon_{k,j,a}$.\\ 
-\noindent Data: We estimate de model in the CNLSY from ages 21 to 30 and in using the NLSY79 and the PSID as a pooled sample from ages 31 to 67 (assumed retirement).\\ \\ 
-\end{footnotesize}
-\end{spacing}
 
 \noindent As mentioned at the beginning of this section, it is also possible to implement that tests of Assumption~\ref{ass:summary} (Invariance)  that we develop in the main text in this context. Table~\ref{table:invariance} displays these tests. As in the main text they consist of: (1) asking if a ``auxiliary sample'' indicator remains significant when predicting labor income (after accounting for $\bm{X}_{a}$ and $\bm{B}$ pooling the auxiliary and the experimental samples; and (2) asking if a ``treatment'' indicator remains significant when predicting labor income (after accounting for $\bm{X}_{a}$ and $\bm{B}$ within the experimental sample. We are able to test this at age 30, using age 21 as lagged income given that these are the two points that we observe in the experimental sample. We implement this test based on the $\rho$-transformed model. We fail to reject the two forms of invariance.\\
 
@@ -226,70 +192,11 @@ Females & 103,006 & (s.e. 63,091) \\ \bottomrule
 \end{footnotesize}
 \end{spacing}
 
-\subsubsection{Lagged Component in $\phi_{j,a}$ and Fixed Effect and Serial Correlation in $\varepsilon_{k,j,a}$}
-
-\noindent In this scenario, we assume that (i) $Y_{k,j,a}$ is one of the elements in $\bm{X}_{k,a}$; (ii) we do not restrict $\rho$ in Equation~\eqref{eq:error}; and (iii) we add a individual-level fixed effect to the process in Equation~\eqref{eq:error}. \\
-
-\noindent Proceeding as in Section~\ref{section:laggedserial}, we can write the system of interest as 
-
-\begin{eqnarray}
-Y_{k,a} &=&\gamma_{0} + \bm{\gamma}_{X,a} \bm{X}_{k} + \varepsilon_{a}. \label{eq:linear3} \\
-\varepsilon_{a} &=& \psi_{i} + \rho \varepsilon_{a-1} + \eta_{a}, \label{eq:linear4}
-\end{eqnarray}
-
-\noindent where $\psi_{i}$ represents the individual-level fixed effect. 
-
-\begin{table}[H] 
-\begin{threeparttable}
-\caption{Net Present Value of Predicted Labor (Treatment - Control) for ABC/CARE}
-\label{table:yourlabel}
-\centering 
-\begin{tabular}{lcc} \toprule
-Pooled & 203,660 & (s.e. 85,479 ) \\
-Males & 252,993 & (s.e. 147,027) \\ 
-Females & 128,115 & (s.e. 75,078) \\ \bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{table}
-\begin{spacing}{1}
-\begin{footnotesize}
-\noindent Note: Net present value of predicted labor (treatment - control) for ABC/CARE estimating the system in Equations~\eqref{eq:linear3} and \eqref{eq:linear4} in the auxiliary samples and using these estimates to form predictions in the experimental sample.\\ 
-\noindent Specification: Lagged component in $\phi_{j,a}$ and First-order serial correlation in $\varepsilon_{k,j,a}$.\\ 
-\noindent Data: We estimate de model in the CNLSY from ages 21 to 30 and in using the NLSY79 and the PSID as a pooled sample from ages 31 to 67 (assumed retirement).\\ \\ 
-\end{footnotesize}
-\end{spacing}
-
-
-\subsubsection{Non-Parametric Predictions}
+\subsubsection{Specification 4: Non-Parametric Predictions}
 
 \noindent An alternative to any of these scenarios is to form non-parametric predictions. That is: (i) for each individual $i$ in the experimental sample (e) find an individual(s) $l(i)$ in the non-experimental sample ($n$) using Algorithm~\ref{alg:match} in Appendix~\ref{appendix:match}; (ii) impute the post-$a^*$ trajectory of $Y_{k,j,a}$ of individual(s) $l(i)$ in the non-experimental sample ($n$) to individual $i$ in the experimental sample ($e$).\\ 
 
-\noindent \textbf{[JJH: No lags?; serial correlation?] [JLG: I have added the next paragraph to clarify this.]}\\
-
 \noindent We perform step (i) at age $a^*$, using variables in $\bm{X}_{j,a*}$. This includes labor income and education at age $a^*$ but not beyond (given that labor income (and education) is not observed in the experimental sample).\footnote{We use both pre- and post-treatment variables to perform step (i). The variables that we use are: years of birth, gender, number of siblings (pre-treatment); years of education, number of children, overall health self-report, and labor income all at age 30 (post-treatment).} In that sense, these estimates do not account for lagged labor income. They account for arbitrary serial correlation because, in both the experimental and the auxiliary samples, we sample the entire histories of individials ($i$ and $l(i)$) when bootstrapping. Thus, we do not restrict the serial correlation structure of the outcomes.\\
-
-\noindent \textbf{In this scenario, the results are the following:}\\
-
-\begin{table}[H] 
-\begin{threeparttable}
-\caption{Net Present Value of Predicted Labor (Treatment - Control) for ABC/CARE}
-\label{table:yourlabel}
-\centering 
-\begin{tabular}{lccc} \toprule
-Pooled & 62,080 & (s.e. 75,030) & \textbf{[JJH: super small] [JLG: Not entirely at odds}\\
-Males & 289,471 & (s.e. 232,471) & \textbf{with Table 1 but I'm revising the matching.} \\ 
-Females & 59,163 & (s.e. 74,039) & \textbf{An update soon.]} \\ \bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{table}
-\begin{spacing}{1}
-\begin{footnotesize}
-\noindent Note: Net present value of predicted labor (treatment - control) for ABC/CARE estimating the system in Equations~\eqref{eq:outcome} and \eqref{eq:error} in the auxiliary samples and using these estimates to form predictions in the experimental sample.\\ 
-\noindent Specification: Non-parametric. \\
-Data: We estimate de model using PSID. We do not use the CNLSY or the NLSY79 because to use the same data as the non-parametric results from FAM. 
-\end{footnotesize}
-\end{spacing}
-
 
 
 
